--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 </a>
     <nav class="nav">
       <p align="center">
-        <b> <a href="/новостная лента.html"style="color:#000000; text-decoration:none">Новостная лента</a></b>
-          <b> <a href="/о нас.html"style="color:#000000; text-decoration:none">О нас</a></b>
-            <b><a href="/реклама.html"style="color:#000000; text-decoration:none">Реклама</a></b>
-              <b><a href="/контакты.html"style="color:#000000; text-decoration:none">Контакты</a></b>
+        <b> <a href="/index.html"style="color:#000000; text-decoration:none">Новостная лента</a></b>
+          <b> <a href="/o nas.html"style="color:#000000; text-decoration:none">О нас</a></b>
+            <b><a href="/reklama.html"style="color:#000000; text-decoration:none">Реклама</a></b>
+              <b><a href="/kontakt.html"style="color:#000000; text-decoration:none">Контакты</a></b>
       </p>
     </nav>
       <h1><b><p align="center" class="news">Новостная лента</p></b></h1>
@@ -65,7 +65,7 @@
             </article>
             <article>
               <div class = "pop">
-                <img src = "12.jpg"width="300px" height="150px">
+                <img src = "./12.JPG"width="300px" height="150px">
                 <a href="/новостная лента.html"style="color:#000000;text-decoration:none">
                 <b><br/>Врачуют раны душ<br/>человеческих</b>
                 <p>Ежегодный праздник "Голос<br/> традиций" состоялся 16<br/> сентября в селе Хирино<br/>Шатканского района<br/>Нижегородской области</p></a>
