--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
     <title>Газета сельская жизнь</title>
 </head>
 <head>
@@ -20,15 +20,15 @@
       </form>
   </div>
 <body>
-  <a href="новостная лента.html">
-  <p><img src="лого.jpg" style="margin-top: -100px;" width="400px" height="300px"></p>
+  <a href="index.html">
+  <p><img src="./лого.jpg" style="margin-top: -100px;" width="400px" height="300px"></p>
 </a>
     <nav class="nav">
       <p align="center">
-        <b> <a href="/index.html"style="color:#000000; text-decoration:none">Новостная лента</a></b>
-          <b> <a href="/o nas.html"style="color:#000000; text-decoration:none">О нас</a></b>
-            <b><a href="/reklama.html"style="color:#000000; text-decoration:none">Реклама</a></b>
-              <b><a href="/kontakt.html"style="color:#000000; text-decoration:none">Контакты</a></b>
+        <b> <a href="./index.html"style="color:#000000; text-decoration:none">Новостная лента</a></b>
+          <b> <a href="./o nas.html"style="color:#000000; text-decoration:none">О нас</a></b>
+            <b><a href="./reklama.html"style="color:#000000; text-decoration:none">Реклама</a></b>
+              <b><a href="./kontakt.html"style="color:#000000; text-decoration:none">Контакты</a></b>
       </p>
     </nav>
       <h1><b><p align="center" class="news">Новостная лента</p></b></h1>
@@ -36,22 +36,22 @@
     <main class="blog">
         <article>
           <div class = "pekin">
-            <img src = "пекин.jpg" width="300px" height="150px">
-            <a href="/путин и пекин.html"style="color:#000000;text-decoration:none"><b><br/>Вектор - на развитие</b>
+            <img src = "./пекин.jpg" width="300px" height="150px">
+            <a href="./putin.html"style="color:#000000;text-decoration:none"><b><br/>Вектор - на развитие</b>
             <p>В ходе визита Владимира Путина в Пекин  <br/> Россия и Китай подписали ряд <br/> соглашений о сотрудничестве в  <br/> области сельского хозяйства</p></a>
           </div>
         </article>
         <article>
           <div class = "deputate">
-            <img src = "депутаты.jpg" width="300px" height="150px">
-            <a href="/новостная лента.html"style="color:#000000;text-decoration:none">
+            <img src = "./депутаты.jpg" width="300px" height="150px">
+            <a href="#"style="color:#000000;text-decoration:none">
             <b><br/>Поддержали проект <br/>агробюджета</b>
             <p>Вчера на заседании комитета ГД по <br/> аграрным вопросам депутаты<br/> рассмотрели и одобрили проект   <br/> федерального бюджета на 2024 год годов и <br/>на плановый период 2025 и 2026<br/>годов</p></a>
           </article>
           <article>
             <div class = "class">
               <img src = "чеснок.jpg" width="300px" height="150px">
-              <a href="/сайт.html"style="color:#000000;text-decoration:none">
+              <a href="#"style="color:#000000;text-decoration:none">
               <b><br/>Надежно по жизни дружить<br/>с чесноком</b>
               <p>Чесночная страда в огородах и на <br/> дачных участках давно завершилась.<br/> Но и в эти дни уместно вспомнить об  <br/> этом удивительном овоще, который <br/>всегда есть в каждом доме</p></a>
               
@@ -59,21 +59,21 @@
             <article>
               <div class = "putin">
                 <img src = "путин.jpg"width="300px" height="150px">
-                <a href="/новостная лента.html"style="color:#000000;text-decoration:none">
+                <a href="#"style="color:#000000;text-decoration:none">
                 <b><br/>Интеграция и<br/>сотрудничество</b>
                 <p>Россия и Китай, как большинство <br/> стран мира, разделяют стремления к<br/> равноправному сотрудничеству при<br/> уважении права каждого государства<br/>на собственную модель развития.</p></a>
             </article>
             <article>
               <div class = "pop">
                 <img src = "./12.JPG"width="300px" height="150px">
-                <a href="/новостная лента.html"style="color:#000000;text-decoration:none">
+                <a href="#"style="color:#000000;text-decoration:none">
                 <b><br/>Врачуют раны душ<br/>человеческих</b>
                 <p>Ежегодный праздник "Голос<br/> традиций" состоялся 16<br/> сентября в селе Хирино<br/>Шатканского района<br/>Нижегородской области</p></a>
             </article>
             <article>
               <div class = "nass">
                 <img src = "овцы.jpg"width="300px" height="150px">
-                <a href="/новостная лента.html"style="color:#000000;text-decoration:none">
+                <a href="#"style="color:#000000;text-decoration:none">
                 <b><br/>Голландские<br/>овцеводы в отчаянии</b>
                 <p>В Голландию впервые за 15 лет<br/> эвернулась одна из наиболее<br/>опасных вирусных болезней<br/>скота-блютанг</p></a>
             </article>
