--- a/reklama.html
+++ b/reklama.html
@@ -20,15 +20,15 @@
       </form>
   </div>
 <body>
-  <a href="новостная лента.html">
-    <p><img src="лого.jpg" style="margin-top: -100px;" width="400px" height="300px"></p>
+  <a href="./index.html">
+    <p><img src="./лого.jpg" style="margin-top: -100px;" width="400px" height="300px"></p>
   </a>
     <nav class="nav">
       <p align="center">
-        <b> <a href="/новостная лента.html"style="color:#000000; text-decoration:none">Новостная лента</a></b>
-          <b> <a href="/о нас.html"style="color:#000000; text-decoration:none">О нас</a></b>
-            <b><a href="/реклама.html"style="color:#000000; text-decoration:none">Реклама</a></b>
-              <b><a href="/контакты.html"style="color:#000000; text-decoration:none">Контакты</a></b>
+        <b> <a href="./index.html"style="color:#000000; text-decoration:none">Новостная лента</a></b>
+          <b> <a href="./o nas.html"style="color:#000000; text-decoration:none">О нас</a></b>
+            <b><a href="./reklama.html"style="color:#000000; text-decoration:none">Реклама</a></b>
+              <b><a href="./kontakt.html"style="color:#000000; text-decoration:none">Контакты</a></b>
       </p>
       <h1><b><p align="center" class="news">Реклама</p></b></h1>
     </nav>
@@ -55,7 +55,7 @@
       }
   </style>
    <div class="container">
-    <img class="image1" src="рука.jpg" >
+    <img class="image1" src="./рука.jpg" >
     <div class="text">
       <style>
         .non-bold-heading {
@@ -92,7 +92,7 @@
 </head>
 <body>
 <div class="container">
-  <img class="image" src="черный.png" >
+  <img class="image" src="./черный.png" >
   <div class="text">
     <p style="font-size: 5px;"width: 200px;></p>
     <br><br><br><br><br><h1><strong>Обьявление об общественных слушаниях</strong></h1><br><br>
